<resources>
    <string name="app_name">petfriendr</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_info_title">Default Location</string>
    <string name="loginButton">Login</string>
    <string name="createAccountButton">createAccount</string>
    <string name="editProfileText">Edit Profile</string>
    <string name="update_email">Update Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_password">Update Password</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="uploadbutton">uploadButton</string>
    <string name="imagepreview">imagePreview</string>
    <string name="updateName">Name</string>
    <string name="createEmail">Email</string>
    <string name="createPassword">Password</string>
    <string name="createUsername">Username</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="profileimage">Profile Image</string>
    <string name="saveChanges">Save Changes</string>
    <string name="ok">OK</string>
    <string name="placeholder_name">Placeholder (Name)</string>
    <string name="commentsplaceholder">commentsplaceholder</string>
    <string name="submitbtn">Submit</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="title_activity_main_navigatrion">MainNavigatrionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>