<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/editProfileScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="19dp"
            android:fontFamily="sans-serif"
            android:text="@string/editProfileText"
            android:textAllCaps="false"
            android:textColor="#F73659"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/editProfileName_textField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editProfileName_textField"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/updateName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/updateProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.199" />

        <EditText
            android:id="@+id/editProfile_textField"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:layout_marginTop="22dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/profile"
            android:inputType="textPersonName"
            android:singleLine="false"
            app:layout_constraintBottom_toTopOf="@+id/updateProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfileName_textField"
            app:layout_constraintVertical_bias="0.004" />

        <Button
            android:id="@+id/uploadProfilePic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="107dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="86dp"
            android:backgroundTint="#F73659"
            android:contentDescription="@string/uploadbutton"
            android:text="@string/upload"
            app:layout_constraintBottom_toTopOf="@+id/updateEmail_textField"
            app:layout_constraintEnd_toStartOf="@+id/imageProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_textField"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="217dp"
            android:layout_height="184dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="#ECCBCB"
            android:contentDescription="@string/imagepreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfileName_textField"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <EditText
            android:id="@+id/updateEmail_textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/update_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/editPassword_textField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

        <EditText
            android:id="@+id/editPassword_textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/update_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/updateProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateEmail_textField" />

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="664dp"
            android:backgroundTint="#F73659"
            android:text="@string/update_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>